--- a/nekobasu-rpg-roguelite/nekobasu-rpg-roguelite.csproj
+++ b/nekobasu-rpg-roguelite/nekobasu-rpg-roguelite.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Classes\" />
+    <None Remove="Data\types.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\types.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
